# PipFission

./: .gitignore  CLAUDE.md  INDEX.md  README.md  README_LIVE.md  STATUS.md  analyze_data.py  build_features.py  oanda_collector.py  start_collector.sh  test_usd_jpy_pb.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  championBanner.ts  deploymentGate.ts  featureSchema.ts  historyApi.ts  index.css  labelOverlay.ts  mlPanelTabs.ts  mlState.ts  optimizerTrials.ts  pipelineRuns.ts  store.ts  tradeLedger.ts  tradePerformance.ts  types.ts  ws.ts
dashboard/src/__tests__/: championBanner.test.ts  mlState.test.ts  (+7 more)
research/: pyproject.toml  requirements.txt
research/scripts/: bootstrap_venv.sh
research/src/research/: __init__.py  __main__.py  features.py  paths.py  pipeline.py
research/src/research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
research/src/research/cli/: __init__.py  __main__.py  export_cmd.py  finetune_cmd.py  label_cmd.py  lockbox_cmd.py  pipeline_cmd.py  train_cmd.py
research/src/research/cv/: __init__.py  purged.py
research/src/research/deployment/: __init__.py  gate.py
research/src/research/export/: __init__.py  manifest.py  onnx_export.py
research/src/research/labeling/: __init__.py  label_opt.py
research/src/research/lockbox/: __init__.py  gate.py
research/src/research/models/: __init__.py  calibration.py  catboost_model.py  lgbm.py  preproc.py  registry.py  sklearn_zoo.py  xgb.py
research/src/research/observability/: __init__.py  jsonl_log.py  tracker.py
research/src/research/stats/: __init__.py  deflated_sharpe.py  pbo.py
research/src/research/trader/: __init__.py  optimizer.py
research/src/research/training/: __init__.py  oof.py  side_train.py
research/tests/: test_deployment_gate.py  test_features.py  test_finetune_pipeline.py  test_full_pipeline.py  test_jsonl_log.py  test_label_pipeline.py  test_model_zoo.py  test_observability.py  test_onnx_export_zoo.py  test_pipeline_orchestrator.py  test_stats.py  test_train_pipeline.py
research/trade_logs/v1.0.1/: deployment_gate.jsonl  training_log.jsonl
scripts/: api-server-supervisor.sh  com.oanda.api-server.plist  com.oanda.trade-logs-sync.plist  sync_trade_logs.sh
server/: .gitignore  Cargo.toml  justfile
server/agent/: AGENTS.md  diagnostics.schema.json  owner-map.json  proof-lanes.toml  test-map.json  unsafe-ledger.toml
server/crates/alpaca-adapter/: Cargo.toml
server/crates/alpaca-adapter/src/: config.rs  lib.rs  router.rs  stream.rs
server/crates/api-server/: Cargo.toml
server/crates/api-server/src/: alpaca_runner.rs  auto_retrain.rs  champion_router.rs  commands.rs  estimator.rs  http.rs  lib.rs  main.rs  pipeline_trigger.rs  runners.rs  state.rs  ws.rs
server/crates/backtest/: Cargo.toml
server/crates/backtest/src/: fill.rs  lib.rs  replay.rs
server/crates/bar-aggregator/: Cargo.toml
server/crates/bar-aggregator/src/: lib.rs
server/crates/bar-aggregator/tests/: bucketing.rs
server/crates/bar-features/: Cargo.toml
server/crates/bar-features/src/: lib.rs
server/crates/cv/: Cargo.toml
server/crates/cv/src/: cpcv.rs  lib.rs  purged_kfold.rs
server/crates/deploy-gate/: Cargo.toml
server/crates/deploy-gate/src/: lib.rs
server/crates/feature-engine/: Cargo.toml
server/crates/feature-engine/src/: incremental.rs  indicators.rs  lib.rs  runner.rs
server/crates/inference/: Cargo.toml
server/crates/inference/src/: calibrator.rs  fallback.rs  hot_swap.rs  lib.rs  manifest.rs  onnx_session.rs  registry.rs
server/crates/inference/tests/: onnx_load.rs
server/crates/labeling/: Cargo.toml
server/crates/labeling/src/: events.rs  label_optimizer.rs  lib.rs  meta.rs  triple_barrier.rs  volatility.rs
server/crates/live-inference/: Cargo.toml
server/crates/live-inference/src/: lib.rs
server/crates/live-inference/tests/: end_to_end.rs
server/crates/live-inference/trade_logs/v1.0.1/EUR_USD/: features.jsonl
server/crates/live-trader/: Cargo.toml
server/crates/live-trader/src/: forensics.rs  jsonl_log.rs  lib.rs
server/crates/live-trader/tests/: end_to_end.rs
server/crates/live-trader/trade_logs/v1.0.1/TEST_PAIR/: decisions.jsonl  trades.jsonl
server/crates/lockbox/: Cargo.toml
server/crates/lockbox/src/: lib.rs
server/crates/market-domain/: Cargo.toml
server/crates/market-domain/src/: account.rs  bar.rs  champion.rs  config.rs  conn.rs  errors.rs  estimate.rs  event.rs  features.rs  history.rs  ids.rs  lib.rs  order.rs  orderbook.rs  price.rs  signal.rs  snapshot.rs  transaction.rs
server/crates/metrics/: Cargo.toml
server/crates/metrics/src/: bootstrap.rs  deflated.rs  drawdown.rs  lib.rs  pbo.rs  ratios.rs
server/crates/oanda-adapter/: Cargo.toml
server/crates/oanda-adapter/src/: backoff.rs  client.rs  lib.rs  replay.rs  router.rs  synthetic.rs
server/crates/oanda-adapter/src/streams/: account_poll.rs  mod.rs  pricing.rs  transactions.rs
server/crates/observability/: Cargo.toml
server/crates/observability/src/: lib.rs
server/crates/persistence/: Cargo.toml
server/crates/persistence/src/: connection.rs  dashboard.rs  lib.rs  retention.rs  schema.rs  writer.rs
server/crates/persistence/tests/: retention.rs
server/crates/pipeline-orchestrator/: Cargo.toml
server/crates/pipeline-orchestrator/src/: main.rs
server/crates/portfolio/: Cargo.toml
server/crates/portfolio/src/: lib.rs  paper_book.rs  reconciliation.rs  router.rs
server/crates/strategy/: Cargo.toml
server/crates/strategy/src/: intent_emitter.rs  lib.rs  online_logreg.rs  runner.rs  walk_forward.rs
server/crates/trader/: Cargo.toml
server/crates/trader/src/: lib.rs  params.rs  risk.rs  state.rs
server/crates/trader/tests/: bounds.rs
strategy_proto/: validate_strategy.py
tips/: tip1.txt  tip10.txt  tip11.txt  tip12.txt  tip2.txt  tip3.txt  tip4.txt  tip5.txt  tip6.txt  tip7.txt  tip8.txt  tip9.txt
trade_logs/: README.md  SCHEMA.md
trade_logs/v1.0.1/: PERFORMANCE.md  champion_changes.jsonl  deployment_gate.jsonl  portfolio_summary.json  training_log.jsonl
(+76 files in other folders)
