[project]
name = "research"
version = "0.1.0"
description = "Spicy Penguin research layer: extract → label → train → fine-tune trader → lockbox → ONNX export."
requires-python = ">=3.11"
authors = [{ name = "VEOX Inc. Research Group" }]

[project.scripts]
research = "research.cli.__main__:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
