[package]
name = "alpaca-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Alpaca crypto WS data + paper trading adapter (BTC/USD, ETH/USD)."

[dependencies]
market-domain = { workspace = true }
portfolio = { workspace = true }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
