[package]
name = "backtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Deterministic event-driven bar-replay backtester. Drives a Trader against a bar stream + per-bar probabilities, returns metrics::Summary + ledger."

[[bin]]
name = "trader_backtest"
path = "src/bin/trader_backtest.rs"

[dependencies]
market-domain = { workspace = true }
trader = { workspace = true }
metrics = { workspace = true }
labeling = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
