[package]
name = "cv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Time-series cross-validation: PurgedKFold + Combinatorial Purged CV (López de Prado §7)."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
