[package]
name = "feature-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Tick → 18-feature vector with incremental rolling state. Sprint 2 milestone M3."

[dependencies]
market-domain = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
