[package]
name = "labeling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Triple-barrier labeling, event sampling, and constrained label optimisation over the trailing 1000-bar window."

[dependencies]
market-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "label_opt"
path = "src/bin/label_opt.rs"

[dev-dependencies]
proptest = { workspace = true }
