[package]
name = "live-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Subscribes to Event::Bar10s, runs the inference registry on closed bars, emits Event::ChampionSignal."

[dependencies]
market-domain = { workspace = true }
inference = { workspace = true }
bar-features = { workspace = true }
live-trader = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
