[package]
name = "live-trader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Live trader state machine: consumes Bar10s + ChampionSignal, drives trader::Trader with TraderParams loaded from DuckDB, emits TraderDecision and persists trade_ledger rows."

[dependencies]
market-domain = { workspace = true }
trader = { workspace = true }
persistence = { workspace = true }
bar-features = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
duckdb = { workspace = true }
tempfile = { workspace = true }
