[package]
name = "market-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Pure domain types and typed IDs for the OANDA live system. No I/O, no tokio."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
