[package]
name = "metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Trading performance metrics: Sharpe, Sortino, Calmar, max DD, profit factor, hit rate, Deflated Sharpe."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
