[package]
name = "oanda-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "OANDA v20 REST + streaming client. Only crate that touches reqwest."

[dependencies]
market-domain = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
portfolio = { workspace = true }
