[package]
name = "persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "DuckDB-backed tick / bar / label / OOF / signal / fill / fitness store with HARD 10k-row-per-instrument cap."

[dependencies]
market-domain = { workspace = true }
labeling = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
duckdb = { workspace = true }

[[bin]]
name = "init_schema"
path = "src/bin/init_schema.rs"

[dev-dependencies]
duckdb = { workspace = true }
tokio = { workspace = true }
