[package]
name = "portfolio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Synthetic paper book + OANDA-actual reconciler. Pure state machine."

[dependencies]
market-domain = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[features]
default = []
proptest-deep = []
