[package]
name = "trader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Deterministic trader state machine: consumes calibrated probabilities, emits trade events. Optimisable via TraderParams."

[dependencies]
market-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
